# flashreduce

./: pyproject.toml
src/: attention.py  scaffold.py
src/flashreduce/codegen/: __init__.py  info.py  scaffold.py  util.py
src/flashreduce/examples/: attention.py
