[project]
name = "flashreduce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
    "torch>=2.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.3.0",
]
bench = [
  "matplotlib>3.10.8",
  "pandas>=2.3.3",
]
